<resources>
    <string name="app_name">联富收益</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="settings">设置</string>
    <string name="header_leaf">扫码</string>
    <string name="header_right">聊天</string>
    <string name="header_right_mem">地图</string>
    <string name="lianfu_shop">联富收益地面店</string>
    <string name="home_page">首页</string>
    <string name="submit">提交</string>
    <string name="select_all">全选</string>
    <string name="comput">结算</string>
    <string name="edit">编辑</string>
    <string name="discount">折扣</string>
    <string name="type">会员升级类型</string>
    <string name="add">新增</string>
    <string name="t_code">二维码</string>
    <string name="map">地图</string>
    <string name="record">消费记录</string>
    <string name="member">会员管理</string>
    <string name="employee">员工</string>
    <string name="personal">个人</string>
    <string name="shop">地面店铺</string>
    <string name="collect">收藏</string>
    <string name="position">定位</string>
    <string name="search">搜索</string>
    <string name="user_name">用户名</string>
    <string name="user_pass">密码</string>
    <string name="login">登录</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login_as">使用第三方账号登录</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="phone_check">手机验证</string>
    <string name="nation">国家</string>
    <string name="phone_num">+86</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="personal_info">个人信息</string>
    <string name="check_pass">确认密码</string>
    <string name="referee">推荐人账号</string>
    <string name="service_address">服务中心所在地</string>
    <string name="service">服务中心</string>
    <string name="protocol">我同意注册协议</string>
    <string name="success">恭喜您，注册成功！</string>
    <string name="back_home">返回首页</string>
    <string name="perfect">完善资料</string>
    <string name="add_record">+新增</string>
    <string name="add_mem">注册会员</string>
    <string name="profit_pay">线下消费利润支付</string>
    <string name="add_employee">新增员工</string>
    <string name="profit_compute">利润结算</string>
    <string name="consume_money">消费金额</string>
    <string name="profit">利润</string>
    <string name="compute_date">结算日期</string>
    <string name="register_date">注册日期</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="manager">管理员</string>
    <string name="personal_msg">个人资料</string>
    <string name="shop_info">店铺资料</string>
    <string name="discount_manage">折扣管理</string>
    <string name="mem_update">会员升级类型</string>
    <string name="modify_pass">修改密码</string>
    <string name="remainder">钱包余额</string>
    <string name="ac_shop_name">店名</string>
    <string name="ac_user_name">用户名</string>
    <string name="ac_name">姓名</string>
    <string name="ac_contact_tel">联系电话/手机</string>
    <string name="ac_discount">折扣</string>
    <string name="ac_consum_sum">消费金额</string>
    <string name="ac_select">选择</string>
    <string name="am_user_name">用户名</string>
    <string name="am_contact_tel">联系电话/手机</string>
    <string name="am_bank">开户银行(选填)</string>
    <string name="am_send_msg">发送注册完成短信</string>
    <string name="am_bank_name">开户银行姓名(选填)</string>
    <string name="am_bank_card">开户银行卡号(选填)</string>
    <string name="am_id">身份证号(选填)</string>
    <string name="am_rel_name">真实姓名</string>
    <string name="am_update_type">升级类型</string>
    <string name="am_select">选择</string>
    <string name="ae_manage_level">管理级别</string>
    <string name="ae_user_name">用户名</string>
    <string name="ae_contact_tel">联系电话(后六位为密码)</string>
    <string name="ae_rel_name">真实姓名</string>
    <string name="ae_update_type">升级类型</string>
    <string name="ae_id">身份证号</string>
    <string name="ae_bank">开户银行(选填)</string>
    <string name="ae_bank_card">开户银行卡号(选填)</string>
    <string name="ae_bank_name">开户银行姓名(选填)</string>
    <string name="ae_select">选择</string>
    <string name="offline_profit">线下消费利润</string>
    <string name="online_compute_record">线上结算记录</string>
    <string name="detail_bank">开户银行</string>
    <string name="detail_bank_card">开户银行卡号</string>
    <string name="detail_bank_name">开户银行姓名</string>
    <string name="detail_sum">消费金额</string>
    <string name="detail_discount_type">折扣类型-</string>
    <string name="detail_son_money">子金额</string>
    <string name="send_msg">发送消息</string>
    <string name="memeber_info">会员信息</string>
    <string name="member_level">会员级别</string>
    <string name="employee_info">员工信息</string>
    <string name="shop_name">地面店名</string>
    <string name="shop_host">店主姓名</string>
    <string name="contact_name">联系人姓名</string>
    <string name="contact_tel">联系人手机</string>
    <string name="contact_const_tel">联系人固定电话</string>
    <string name="contact_intel">联系QQ/客服QQ</string>
    <string name="shop_employee">客服员工</string>
    <string name="contact_email">联系Email</string>
    <string name="occupation">所属行业</string>
    <string name="address">所在地区</string>
    <string name="detail_address">详细地址</string>
    <string name="commodity">经营商品</string>
    <string name="map_locate">地图定位</string>
    <string name="top_ad">顶部广告位</string>
    <string name="shop_img">地面店照片</string>
    <string name="cancel">取消</string>
    <string name="online_pay">在线支付</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="bill_num">小票单号</string>
    <string name="upload_bill">上传小票照片</string>
    <string name="contact_employee">联系客服</string>
    <string name="pay">买单</string>
    <string name="employee_management">员工管理</string>
    <string name="username_cannot_be_null">用户名不能为空！</string>
    <string name="password_cannot_be_null">密码不能为空</string>
    <string name="fail_to_login">登录失败</string>
    <string name="connecting">正在连接</string>
    <string name="please_wait">请稍后</string>
    <string name="phone_num_cannot_be_null">电话号码不能为空！</string>
    <string name="send_message">发送短信中...</string>
    <string name="check_code_cannot_be_null">验证码不能为空！</string>
    <string name="message_send_success">短信发送成功！</string>
    <string name="format_error">手机格式有误</string>
    <string name="code_error">验证码有误！</string>
    <string name="server_exception">服务器异常！</string>
    <string name="code_invalid">验证码已失效！</string>
    <string name="checking_code">正在验证...</string>
    <string name="update_list">升级列表</string>
    <string name="password_not_matched">两次输入密码不一致，请重新输入！</string>
    <string name="consume">消费</string>
    <string name="login_timeout">登录超时</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="collect_failed">收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="confirmed">已确认</string>
    <string name="select_sex">选择性别</string>
    <string name="pass">密码</string>
    <string name="add_success">添加成功</string>
    <string name="user">启用</string>
    <string name="nouser">停用</string>
    <string name="update_success">更新成功</string>
    <string name="title_activity_store_location">StoreLocation</string>
    <string name="title_activity_update_password">UpdatePassword</string>
    <string name="please_input_old_password">请输入旧密码：</string>
    <string name="please_input_new_password">请输入新密码：</string>
    <string name="please_input_newpassword_again">请再次输入新密码：</string>
    <string name="old_password_cannot_be_null">旧密码不能为空!</string>
    <string name="new_password_cannot_be_null">新密码不能为空!</string>
    <string name="new_password_do_not_match">两次输入的密码不一致！</string>
    <string name="update_password_success">密码修改成功！</string>
    <string name="old_password_error">旧密码输入错误！</string>
    <string name="add_error">添加失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="username_already_exist">用户名已经存在！</string>
    <string name="edit_success">编辑成功！</string>
    <string name="update_fail">修改失败！</string>
    <string name="offline_pay">已线下付款</string>
    <string name="login_out">退出登录</string>
    <string name="delete_failed">删除失败</string>
    <string name="delete_success">删除成功</string>
    <string name="discount_type">折扣类型</string>
    <string name="title_activity_add_discount">AddDiscountActivity</string>
    <string name="add_failed">添加失败</string>
    <string name="title_activity_select_pay_method">SelectPayMethod</string>
    <string name="pay_by_alipay">支付宝支付</string>
    <string name="pay_by_wechat">微信支付</string>
    <string name="pay_by_bank_card">银行卡支付</string>
    <string name="title_activity_pay_by_ali_pay">PayByAliPay</string>
    <string name="commodity_name">商品名称:</string>
    <string name="test_commodity">测试的商品</string>
    <string name="commodity_describe">商品描述</string>
    <string name="test_commodity_detail">该测试商品的详细描述</string>
    <string name="commodity_price">商品价格:</string>
    <string name="price">0.01元</string>
    <string name="check_account">检查账户</string>
    <string name="pay_success">支付成功！</string>
    <string name="pay_result_is_confirming">支付结果确认中</string>
    <string name="pay_fail">支付失败</string>
    <string name="check_pay_result">检查结果为：</string>
    <string name="pay_amount_cannot_be_null">支付金额不能为空！</string>
    <string name="pay_profit">利润</string>
    <string name="store_consume_profit">地面店消费利润</string>
    <string name="add_discount">添加折扣</string>
    <string name="back_login">返回登陆</string>
    <string name="double_code_scan">二维码扫描</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="no_account_profit">没有需要结算的利润！</string>
    <string name="request_success">请求成功！</string>
    <string name="wechat_pay_has_not_online">微信支付尚未开通，敬请期待！</string>
    <string name="bankcard_pay_has_not_online">银行卡支付尚未开通，敬请期待！</string>
    <string name="please_check_and_login_your_alipay_account">请检查并登录您的支付宝账户！</string>
    <string name="second">秒</string>
    <string name="reget_check_code">重新获取验证码</string>
    <string name="invalid_code">授权码失效！</string>
    <string name="invalid_openid">openid失效</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="return_is_null">返回为空</string>
    <string name="newpassword_same_with_oldpassword">新密码与旧密码一致!请重新输入</string>
    <string name="fee_can_not_be_null">金额不能为空！</string>
    <string name="receipt_no_can_not_be_null">小票单号不能为空！</string>
    <string name="new_function_has_not_online">新功能尚未开通，敬请期待！</string>
    <string name="internet_request_timeout">网络请求超时！</string>
    <string name="realname_cannot_be_null">真实姓名不能为空</string>
    <string name="phone_format_error">电话号码格式错误</string>
    <string name="operate_fail">操作失败</string>
    <string name="has_been_collected">已收藏</string>
    <string name="relate">关联账户</string>
    <string name="relate_account">请输入联富账号</string>
    <string name="passwd">请输入密码</string>
    <string name="account">请填写联富账号</string>
    <string name="pwd">请填写密码</string>
    <string name="network_has_not_connect">网络未连接，请联网后重试</string>
    <string name="please_choose_consume_user">请选择消费用户</string>
    <string name="please_choose_discount">请选择折扣</string>
    <string name="please_input_correct_amount">请填写正确的消费金额</string>
    <string name="please_input_correct_discount_type">请输入正确的折扣类型</string>
    <string name="please_choose_correct_discount">请输入正确的折扣</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="please_input_username">请填写用户名</string>
    <string name="please_input_correct_phonenumber">请填写正确的电话号码</string>
    <string name="please_input_name">请填写姓名</string>
    <string name="please_input_idnumber">请填写身份证号码</string>
    <string name="please_input_bank_account">请填写银行账户</string>
    <string name="please_input_bank_name">请填写银行名称</string>
</resources>