<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:background="@android:color/black"
        android:layout_marginTop="60dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:text="@string/success"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/back_home"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@drawable/register_success"
            android:text="@string/back_home"/>

        <Button android:id="@+id/perfect_info"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@drawable/register_perfect"
            android:text="@string/perfect"
            android:layout_marginLeft="36dp"/>

    </LinearLayout>

</LinearLayout>
