<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/content"
        style="@style/title_bar_style"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/discount"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="@anim/fragment_style"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/shop" />

            <TextView
                android:id="@+id/shop"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/ac_select" />
        </LinearLayout>

        <View style="@style/view_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:text="@string/consume_money" />

            <EditText
                android:id="@+id/money"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:textColorHint="@android:color/black"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <View style="@style/view_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:text="@string/ac_contact_tel" />

            <EditText
                android:id="@+id/contact_tel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:editable="false"
                android:textColorHint="@android:color/black"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <View style="@style/view_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:text="@string/bill_num" />

            <EditText
                android:id="@+id/bill_num"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:textColorHint="@android:color/black"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <View style="@style/view_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@anim/btn_style"
                android:layout_marginLeft="20dp"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="@string/upload_bill" />

            <ImageView android:id="@+id/bill"
                android:layout_width="200dp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pay_offline"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/compute"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/offline_pay" />
        <Button
            android:id="@+id/pay_online"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/compute"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/online_pay" />
    </LinearLayout>

</LinearLayout>
